2005-07-17 Pierrick LE GALL

	* new feature : use Apache authentication. If
	$conf['apache_authentication'] is set true : if no user matches
	$_SERVER['REMOTE_USER'] in "users" table, PWG automatically
	creates one. This way, users can customize the behaviour of the
	application.

	* template : new organisation of identification menu
	(category.php). Simplification is required for Apache
	authentication (no logout link even if user is externally logged
	in)

	* new : usernames can contain quotes (required because Apache
	authentication authorized quotes in usernames)

2005-07-17 Pierrick LE GALL

	* new configuration parameter : hide thumbnail captions on main
	page with $conf['show_thumbnail_caption']

	* new configuration parameter : hide picture name in title on
	picture presentation page with $conf['show_picture_name_on_title']

	* template : new CSS classes to manage picture.php title
	
2005-07-16 Pierrick LE GALL

	* new feature : RSS notification feed. Feed generator is an
	external tool (FeedCreator class v1.7.2). New file feed.php

	* new database field : comments.validation_date (datetime). This
	field is required for notification feed.

	* new database field : users.feed_id (varchar(50)). users.feed_id
	is an alias of users.id but is much more complicated to find (50
	characters, figures or letters, case sensitive) : the purpose is
	to keep it secret (as far as possible).

	* new database field : users.last_feed_check (datetime)

	* new database field : users.registration_date (datetime)

	* bug fixed : no need to add the (unavailable) session id to
	install.php in the installation form.

	* modified database field : images.date_available become more
	precise (date to datetime). This precision is needed for
	notification feed.

	* new index : comments_i1 (validation_date). Might be useful for
	feed queries.

	* new index : comments_i2 (image_id). Useful each time you want to
	have informations about an element and its associated comments.
